--- a/application.yml
+++ b/application.yml
@@ -7,7 +7,7 @@ management:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka/
 
 spring:
   redis:
