--- a/product-service.yml
+++ b/product-service.yml
@@ -17,6 +17,8 @@ spring:
     type: redis
 
 eureka:
+  instance:
+    prefer-ip-address: true
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
