--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -29,3 +29,8 @@ spring:
 eureka:
   instance:
     prefer-ip-address: true
+    ip-address: 127.0.0.1
+
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
