--- a/product-service.yml
+++ b/product-service.yml
@@ -19,6 +19,7 @@ spring:
 eureka:
   instance:
     prefer-ip-address: true
+    ip-address: 127.0.0.1
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
