--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -28,6 +28,7 @@ spring:
 
 eureka:
   instance:
+    instance-id: ${spring.application.name}:${random.value}}
     prefer-ip-address: true
     ip-address: 127.0.0.1
 
