--- a/product-service.yml
+++ b/product-service.yml
@@ -18,6 +18,7 @@ spring:
 
 eureka:
   instance:
+    instance-id: ${spring.application.name}:${random.value}}
     prefer-ip-address: true
     ip-address: 127.0.0.1
   client:
