--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -1,5 +1,14 @@
 spring:
   cloud:
+    loadbalancer:
+      cache:
+        enabled: true
+        ttl: 5s
+      health-check:
+        enabled: true
+        path: /actuator/health
+        interval: 5s
+        refetch-instances: true
     gateway:
       routes:
         - id: product-route
