--- a/product-service.yml
+++ b/product-service.yml
@@ -21,6 +21,9 @@ eureka:
     instance-id: ${spring.application.name}:${random.value}}
     prefer-ip-address: true
     ip-address: 127.0.0.1
+    leaseRenewalIntervalInSeconds: 5
+    leaseExpirationDurationInSeconds: 10
   client:
+    registryFetchIntervalSeconds: 5
     service-url:
       defaultZone: http://localhost:8761/eureka/
