--- a/product-service.yml
+++ b/product-service.yml
@@ -27,3 +27,10 @@ eureka:
     registryFetchIntervalSeconds: 5
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+management.endpoint.health.show-details: always
