--- a/order-service.yml
+++ b/order-service.yml
@@ -8,6 +8,10 @@ spring:
     username: sa
     password:
 
+  cloud:
+    loadbalancer:
+      enabled: true
+
   jpa:
     hibernate:
       ddl-auto: update
